[tool.poetry]
name = "option_pricing"
version = "0.1.0"
description = "Option Pricing based on derivates ss2022"
authors = ["Sebastian Markgraf <Sebastian-Markgraf@t-online.de>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.23.0"
scipy = "^1.8.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
